# disable-input

./: Cargo.toml  build.rs
.github/workflows/: release.yml
src/: input.rs  main.rs  setuid.rs
src/input/: background_reader.rs
