[package]
name = "disable-input"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
authors = ["David Kleingeld"]
readme = "Readme.md"
categories = ["command-line-utilities"]
exclude = [".github/*", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
sudo = "0.6"

[build-dependencies]
rustc_version = "0.4"
